--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="topnav-right">
                 <a class="active" href="https://www.pop.org/">Main</a>
                 <a href="https://maps.app.goo.gl/nwHzPGwLdMT2iMfm8">Maps</a>
-                <a href="https://www.pop.org/will-argentina-elect-a-pro-life-president/">Population Research Institute</a>
+                <a href="https://www.pop.org/pro-abortion-lobby-poses-new-danger-to-unborn-italian-babies/">Population Research Institute</a>
             </div>
         </div>
         </ul>
@@ -78,25 +78,13 @@
                 <h2>Pearltrees</h2>
                 <iframe src="https://www.pearltrees.com/populationresearchinstitute" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="100%" allowfullscreen></iframe>
             </section>
-            <!--Embeds-->
+            <!--Cloudstack Links-->
             <section>
-                <!--Maps-->
-                <!--Things to do-->
-                <!--News-->
-                <!--Website-->
-                <!--Media-->
-                <!--Peartrees-->
-                <!--Business-->
-                <!--Cloudstack-->
+                <a target="_bLank" href="https://baay22.github.io/Population-2/">https://baay22.github.io/Population-2/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Population-2/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Population-2/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Population-2/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Population-2/index.html</a><br>
+                <a target="_bLank" href="https://splendorous-cheesecake-6d341f.netlify.app/">https://splendorous-cheesecake-6d341f.netlify.app/</a><br>
             </section>
-            <!--Links-->
-            <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-            </section>
-        </div>
         <!---Sidebar-->
         <div class="side-bar">
             <section>
@@ -106,10 +94,10 @@
                     <li><a class="button-link1" href="https://www.instagram.com/populationresearchinstitute/"><i style="font-size:14px" class="fa fa-instagram"></i> Instagram</a></li>
                     <li><a class="button-link1" href="https://twitter.com/PRISource"><i style="font-size:14px" class="fa fa-twitter"></i> Twitter</a></li>
                     <li><a class="button-link1" href="https://www.youtube.com/populationresearchinstitute"><i style="font-size:14px" class="fa fa-youtube"></i> Youtube</a></li>
-                    <li><a class="button-link1" href="#"><i style="font-size:14px" class="fa fa-pearltress"></i> Pearltrees</a></li>
-                    <li><a class="button-link1" href="#"><i style="font-size:14px" class="fa fa-calendar"></i> Calendar</a></li>
+                    <li><a class="button-link1" href="https://www.pearltrees.com/popresearchinstitute"><i style="font-size:14px" class="fa fa-pearltress"></i> Pearltrees</a></li>
+                    <li><a class="button-link1" href="https://calendar.google.com/calendar/embed?src=21233ebf1ba7fcef2030d3bcc6c403e539ad9f820d8b8c0506d70ddb3bb16507%40group.calendar.google.com&ctz=Asia%2FManila"><i style="font-size:14px" class="fa fa-calendar"></i> Calendar</a></li>
                     <li><a class="button-link1" href="https://www.pop.org/"><i style="font-size:14px" class="fa fa-google"></i> Google Site</a></li>
-                    <li><a class="button-link1" href="#"><i style="font-size:14px" class="fa fa-about"></i> About</a></li>
+                    <li><a class="button-link1" href="https://www.chili.edu.pl/profile/overpopulation09/profile"><i style="font-size:14px" class="fa fa-about"></i> About</a></li>
                 </ul>
             </section>
         </div>
